--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1453,12 +1453,14 @@
   { \__kernel_tl_gset:Nx #1 { \__kernel_exp_not:w \exp_after:wN {#2} } }
 \cs_new_protected:Npn \tl_gset:Nx #1#2
   { \__kernel_tl_gset:Nx #1 {#2} }
-\cs_generate_variant:Nn \tl_set:Nn  {         NV , Nv , Nf }
+\cs_generate_variant:Nn \tl_set:Nn  {    NV , Nv , Nf }
+\cs_generate_variant:Nn \tl_set:Nn  { c, cV , cv , cf }
 \cs_generate_variant:Nn \tl_set:Nx  { c }
-\cs_generate_variant:Nn \tl_set:Nn  { c, co , cV , cv , cf }
-\cs_generate_variant:Nn \tl_gset:Nn {         NV , Nv , Nf }
+\cs_generate_variant:Nn \tl_set:No  { c }
+\cs_generate_variant:Nn \tl_gset:Nn {    NV , Nv , Nf }
+\cs_generate_variant:Nn \tl_gset:Nn { c, cV , cv , cf }
 \cs_generate_variant:Nn \tl_gset:Nx { c }
-\cs_generate_variant:Nn \tl_gset:Nn { c, co , cV , cv , cf }
+\cs_generate_variant:Nn \tl_gset:No { c }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
