--- a/l3kernel/l3text-purify.dtx
+++ b/l3kernel/l3text-purify.dtx
@@ -94,7 +94,8 @@
 % \begin{macro}[EXP]{\@@_purify_math_cmd:Nn}
 % \begin{macro}[EXP]{\@@_purify_replace:N}
 % \begin{macro}[EXP]{\@@_purify_replace:n}
-% \begin{macro}[EXP]{\@@_purify_expand:N, \@@_purify_protect:N}
+% \begin{macro}[EXP]{\@@_purify_expand:N, \@@_purify_protect:N, \@@_purify_encoding:N}
+% \begin{macro}[EXP]{\@@_purify_encoding_escape:NN}
 %   As in the other parts of the module, we start off with a standard
 %   \enquote{action} loop, with expansion applied up-front.
 %    \begin{macrocode}
@@ -288,18 +289,35 @@
   {
     \str_if_eq:nnTF {#1} { \protect }
       { \@@_purify_protect:N }
-      {
-        \@@_if_expandable:NTF #1
-          { \exp_after:wN \@@_purify_loop:w #1 }
-          { \@@_purify_loop:w }
-      }
+      { \@@_purify_encoding:N #1 }
   }
 \cs_new:Npn \@@_purify_protect:N #1
   {
     \@@_if_recursion_tail_stop_do:Nn #1 { \@@_purify_end:w }
     \@@_purify_loop:w
   }
+%    \begin{macrocode}
+%   Handle encoding commands, as detailed for expansion.
 %    \end{macrocode}
+\cs_new:Npn \@@_purify_encoding:N #1
+  {
+    \bool_lazy_or:nnTF
+      { \cs_if_eq_p:NN #1 \@current@cmd }
+      { \cs_if_eq_p:NN #1 \@changed@cmd }
+      { \@@_purify_encoding_escape:NN }
+      {
+        \@@_if_expandable:NTF #1
+          { \exp_after:wN \@@_purify_loop:w #1 }
+          { \@@_purify_loop:w }
+      }
+  }
+\cs_new:Npn \@@_purify_encoding_escape:NN #1#2
+  {
+    \@@_purify_store:n {#1}
+    \@@_purify_loop:w
+  }
+%    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
