Ints should be backend-specfifc

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -180,17 +180,17 @@
 %    \end{macrocode}
 %
 % \begin{macro}{\__kernel_color_stack_init:Nnn}
-% \begin{variable}{\g_@@_stack_int, \c_@@_main_stack_int}
+% \begin{variable}{\g_@@_backend_stack_int, \c_@@_backend_main_stack_int}
 %   In \texttt{(x)dvipdfmx}, the base color stack is not set up, so we have to
 %   force that, as well as providing a mechanism more generally.
 %    \begin{macrocode}
 \int_compare:nNnF \c__kernel_sys_dvipdfmx_version_int < { 20201111 }
   {
-    \int_new:N \g_@@_stack_int
+    \int_new:N \g_@@_backend_stack_int
     \cs_new_protected:Npx \__kernel_color_stack_init:Nnn #1#2#3
       {
-        \int_gincr:N \exp_not:N \g_@@_stack_int
-        \int_const:Nn #1 { \exp_not:N \g_@@_stack_int }
+        \int_gincr:N \exp_not:N \g_@@_backend_stack_int
+        \int_const:Nn #1 { \exp_not:N \g_@@_backend_stack_int }
         \cs_if_exist:NTF \AtBeginDvi
           { \exp_not:N \AtBeginDvi }
           { \exp_not:N \use:n }
@@ -198,7 +198,7 @@
             \__kernel_backend_literal:x
               {
                 pdfcolorstackinit ~
-                \exp_not:N \int_use:N \exp_not:N \g_@@_stack_int
+                \exp_not:N \int_use:N \exp_not:N \g_@@_backend_stack_int
                 \c_space_tl
                 \exp_not:N \tl_if_blank:nF {#2} { #2 ~ }
                 (#3)
@@ -211,10 +211,10 @@
           { \int_use:c { main@pdfcolorstack } }
       }
       {
-        \__kernel_color_stack_init:Nnn \c_@@_main_stack_int
+        \__kernel_color_stack_init:Nnn \c_@@_backend_main_stack_int
           { page ~ direct } { 0 ~ g ~ 0 ~ G }
         \int_set_eq:NN \l__kernel_color_stack_int
-          \c_@@_main_stack_int
+          \c_@@_backend_main_stack_int
       }
     
   }
