Move various color internals to backend
The transparency plan now has this inside color, so
we do not need "kernel". At the same time, these should
have been marked "backend" in any case.

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -179,7 +179,7 @@
 %<*dvipdfmx|xetex>
 %    \end{macrocode}
 %
-% \begin{macro}{\__kernel_color_stack_init:Nnn}
+% \begin{macro}{\@@_backend_stack_init:Nnn}
 % \begin{variable}{\g_@@_backend_stack_int, \c_@@_backend_main_stack_int}
 %   In \texttt{(x)dvipdfmx}, the base color stack is not set up, so we have to
 %   force that, as well as providing a mechanism more generally.
@@ -187,7 +187,7 @@
 \int_compare:nNnF \c__kernel_sys_dvipdfmx_version_int < { 20201111 }
   {
     \int_new:N \g_@@_backend_stack_int
-    \cs_new_protected:Npx \__kernel_color_stack_init:Nnn #1#2#3
+    \cs_new_protected:Npx \@@_backend_stack_init:Nnn #1#2#3
       {
         \int_gincr:N \exp_not:N \g_@@_backend_stack_int
         \int_const:Nn #1 { \exp_not:N \g_@@_backend_stack_int }
@@ -207,28 +207,27 @@
       }
     \cs_if_exist:cTF { main@pdfcolorstack }
       {
-        \int_set:Nn \l__kernel_color_stack_int
+        \int_set:Nn \l_@@_backend_stack_int
           { \int_use:c { main@pdfcolorstack } }
       }
       {
-        \__kernel_color_stack_init:Nnn \c_@@_backend_main_stack_int
+        \@@_backend_stack_init:Nnn \c_@@_backend_main_stack_int
           { page ~ direct } { 0 ~ g ~ 0 ~ G }
-        \int_set_eq:NN \l__kernel_color_stack_int
+        \int_set_eq:NN \l_@@_backend_stack_int
           \c_@@_backend_main_stack_int
       }
-    
   }
 %    \end{macrocode}
 % \end{variable}
 % \end{macro}
 %
-% \begin{macro}{\__kernel_color_stack_push:nn}
-% \begin{macro}{\__kernel_color_stack_pop:n}
+% \begin{macro}{\@@_backend_stack_push:nn}
+% \begin{macro}{\@@_backend_stack_pop:n}
 %   Simple enough but needs a version check.
 %    \begin{macrocode}
 \int_compare:nNnF \c__kernel_sys_dvipdfmx_version_int < { 20201111 }
   {
-    \cs_new_protected:Npn \__kernel_color_stack_push:nn #1#2
+    \cs_new_protected:Npn \@@_backend_stack_push:nn #1#2
       {
         \__kernel_backend_literal:x
           {
@@ -237,7 +236,7 @@
             push ~ (#2)
           }
       }
-    \cs_new_protected:Npn \__kernel_color_stack_pop:n #1
+    \cs_new_protected:Npn \@@_backend_stack_pop:n #1
       {
         \__kernel_backend_literal:x
           {
@@ -261,9 +260,9 @@
 %<*luatex|pdftex>
 %    \end{macrocode}
 %
-% \begin{macro}{\__kernel_color_stack_init:Nnn}
+% \begin{macro}{\@@_backend_stack_init:Nnn}
 %    \begin{macrocode}
-\cs_new_protected:Npn \__kernel_color_stack_init:Nnn #1#2#3
+\cs_new_protected:Npn \@@_backend_stack_init:Nnn #1#2#3
   {
     \int_const:Nn #1
       {
@@ -280,10 +279,10 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\__kernel_color_stack_push:nn}
-% \begin{macro}{\__kernel_color_stack_pop:n}
+% \begin{macro}{\@@_backend_stack_push:nn}
+% \begin{macro}{\@@_backend_stack_pop:n}
 %    \begin{macrocode}
-\cs_new_protected:Npn \__kernel_color_stack_push:nn #1#2
+\cs_new_protected:Npn \@@_backend_stack_push:nn #1#2
   {
 %<*luatex>
     \tex_pdfextension:D colorstack ~
@@ -293,7 +292,7 @@
 %</pdftex>
       \int_eval:n {#1} ~ push ~ {#2}
   }
-\cs_new_protected:Npn \__kernel_color_stack_pop:n #1
+\cs_new_protected:Npn \@@_backend_stack_pop:n #1
   {
 %<*luatex>
     \tex_pdfextension:D colorstack ~
@@ -363,11 +362,11 @@
 %<*dvipdfmx|luatex|pdftex|xetex>
 %    \end{macrocode}
 %
-% \begin{variable}{\l__kernel_color_stack_int}
+% \begin{variable}{\l_@@_backend_stack_int}
 %   \pdfTeX{}, \LuaTeX{} and recent \texttt{(x)dvipdfmx} have multiple stacks
 %   available, and to track which one is in use a variable is required.
 %    \begin{macrocode}
-\int_new:N \l__kernel_color_stack_int
+\int_new:N \l_@@_backend_stack_int
 %    \end{macrocode}
 % \end{variable}
 %
@@ -388,11 +387,11 @@
   { \@@_backend_select:n { #1 ~ rg ~ #1 ~ RG } }
 \cs_new_protected:Npn \@@_backend_select:n #1
   {
-    \__kernel_color_stack_push:nn \l__kernel_color_stack_int {#1}
+    \@@_backend_stack_push:nn \l_@@_backend_stack_int {#1}
     \group_insert_after:N \@@_backend_reset:
   }
 \cs_new_protected:Npn \@@_backend_reset:
-  { \__kernel_color_stack_pop:n \l__kernel_color_stack_int }
+  { \@@_backend_stack_pop:n \l_@@_backend_stack_int }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
