--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -184,7 +184,8 @@
 %   In \texttt{(x)dvipdfmx}, the base color stack is not set up, so we have to
 %   force that, as well as providing a mechanism more generally.
 %    \begin{macrocode}
-\int_compare:nNnF \c__kernel_sys_dvipdfmx_version_int < { 20201111 }
+\int_compare:nNnTF \c__kernel_sys_dvipdfmx_version_int < { 20201111 }
+  { \cs_new_protected:Npn \@@_backend_stack_init:Nnn #1#2#3 { } }
   {
     \int_new:N \g_@@_backend_stack_int
     \cs_new_protected:Npx \@@_backend_stack_init:Nnn #1#2#3
@@ -221,7 +222,7 @@
 % \end{variable}
 % \end{macro}
 %
-% \begin{macro}{\@@_backend_stack_push:nn}
+% \begin{macro}{\@@_backend_stack_push:nn, \@@_backend_stack_push:nx}
 % \begin{macro}{\@@_backend_stack_pop:n}
 %   Simple enough but needs a version check.
 %    \begin{macrocode}
@@ -236,6 +237,7 @@
             push ~ (#2)
           }
       }
+    \cs_generate_variant:Nn \@@_backend_stack_push:nn { nx }
     \cs_new_protected:Npn \@@_backend_stack_pop:n #1
       {
         \__kernel_backend_literal:x
@@ -279,7 +281,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_backend_stack_push:nn}
+% \begin{macro}{\@@_backend_stack_push:nn, \@@_backend_stack_push:nx}
 % \begin{macro}{\@@_backend_stack_pop:n}
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_stack_push:nn #1#2
@@ -292,6 +294,7 @@
 %</pdftex>
       \int_eval:n {#1} ~ push ~ {#2}
   }
+\cs_generate_variant:Nn \@@_backend_stack_push:nn { nx }
 \cs_new_protected:Npn \@@_backend_stack_pop:n #1
   {
 %<*luatex>
@@ -1118,6 +1121,169 @@
 \cs_new_eq:NN \@@_backend_fill_devicen:nn \@@_backend_fill_separation:nn
 \cs_new_eq:NN \@@_backend_stroke_devicen:nn \@@_backend_stroke_separation:nn
 %    \end{macrocode}
+% \end{macro}
+%
+%    \begin{macrocode}
+%</dvisvgm>
+%    \end{macrocode}
+%
+% \subsection{Opacity (transparency)}
+%
+% Although opacity is not color, it needs to be managed in a somewhat
+% similar way: using a dedicated stack if possible. Depending on the backend,
+% that may not be possible. There is also the need to cover fill/stroke setting
+% as well as more general running opacity. It is easiest to describe the value
+% used in terms of opacity, although commonly this is referred to as
+% transparency.
+%
+%    \begin{macrocode}
+%<*dvips>
+%    \end{macrocode}
+%
+% \begin{macro}{\@@_backend_opacity_select:n}
+%   No stack support.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_opacity_select:n #1 { }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_backend_fill_opacity:n, \@@_backend_stroke_opacity:n}
+% \begin{macro}{\@@_backend_opacity:nn, \@@_backend_opacity:xn}
+%   Similar to the above but with no stack and only adding to one or other of
+%   the entries.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_fill_opacity:n #1
+  { \@@_backend_opacity:nn { \fp_eval:n { min(max(0,#1),1) } } { fill } }
+\cs_new_protected:Npn \@@_backend_stroke_opacity:n #1
+  { \@@_backend_opacity:nn { \fp_eval:n { min(max(0,#1),1) } } { stroke } }
+\cs_new_protected:Npn \@@_backend_opacity:nn #1#2
+  {
+    \__kernel_backend_postscript:n { #1 ~ .set #2 constantalpha  }
+  }
+\cs_generate_variant:Nn \@@_backend_opacity:nn { x }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+%    \begin{macrocode}
+%</dvips>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%<*dvipdfmx|luatex|pdftex|xetex>
+%    \end{macrocode}
+%
+% \begin{variable}{\c_@@_backend_opacity_stack_int}
+%   Set up a stack.
+%    \begin{macrocode}
+\@@_backend_stack_init:Nnn \c_@@_backend_opacity_stack_int
+  { page ~ direct } { /color.opa 1 ~ gs }
+\cs_if_exist:NT \pdfmanagement_add:nnn
+  {
+    \pdfmanagement_add:nnn { Page / Resources / ExtGState }
+      { color.opa 1 } { << /ca ~ 1 /CA ~ 1 >> }
+  }
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}{\@@_backend_opacity_select:n, \@@_backend_opacity_select_aux:n}
+% \begin{macro}{\@@_backend_opacity_reset:}
+%   Other than the need to evaluate the opacity as an \texttt{fp}, much the
+%   same as color.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_opacity_select:n #1
+ {
+   \exp_args:Nx \@@_backend_opacity_select_aux:n
+     { \fp_eval:n { min(max(0,#1),1) } }
+   \group_insert_after:N \@@_backend_opacity_reset:
+ }
+\cs_new_protected:Npn \@@_backend_opacity_select_aux:n #1
+  {
+    \pdfmanagement_add:nnn { Page / Resources / ExtGState }
+      { color.opa #1 }
+      { << /ca ~ #1 /CA ~ #1 >> }
+   \@@_backend_stack_push:nn \c_@@_backend_opacity_stack_int
+     { /color.opa #1 ~ gs }
+  }
+\cs_if_exist:NF \pdfmanagement_add:nnn
+  {
+    \cs_gset_protected:Npn \@@_backend_opacity_select_aux:n #1 { }
+  }
+\cs_new_protected:Npn \@@_backend_opacity_reset:
+ { \@@_backend_stack_pop:n \c_@@_backend_opacity_stack_int }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\@@_backend_fill_opacity:n, \@@_backend_stroke_opacity:n}
+% \begin{macro}{\@@_backend_opacity:nn, \@@_backend_opacity:xn}
+%   Similar to the above but with no stack and only adding to one or other of
+%   the entries.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_fill_opacity:n #1
+  { \@@_backend_opacity:nn { \fp_eval:n { min(max(0,#1),1) } } { ca } }
+\cs_new_protected:Npn \@@_backend_stroke_opacity:n #1
+  { \@@_backend_opacity:nn { \fp_eval:n { min(max(0,#1),1) } } { CA } }
+\cs_new_protected:Npn \@@_backend_opacity:nn #1#2
+  {
+    \pdfmanagement_add:nnn { Page / Resources / ExtGState }
+      { color.opa #1 }
+      { << /#2 ~ #1 >> }
+   \@@_backend_stack_push:nn \c_@@_backend_opacity_stack_int
+     { /color.opa #1 ~ gs }
+  }
+\cs_generate_variant:Nn \@@_backend_opacity:nn { x }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+%    \begin{macrocode}
+%</dvipdfmx|luatex|pdftex|xetex>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%<*dvipdfmx|xdvipdfmx>
+%    \end{macrocode}
+%
+% \begin{macro}{\@@_backend_opacity_select:n}
+%   Older backends have no stack support.
+%    \begin{macrocode}
+\int_compare:nNnT \c__kernel_sys_dvipdfmx_version_int < { 20201111 }
+  {
+    \cs_gset_protected:Npn \@@_backend_opacity_select:n #1 { }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+%    \begin{macrocode}
+%</dvipdfmx|xdvipdfmx>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%<*dvisvgm>
+%    \end{macrocode}
+%
+% \begin{macro}{\@@_backend_opacity_select:n}
+%   No stack support.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_opacity_select:n #1 { }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_backend_fill_opacity:n, \@@_backend_stroke_opacity:n}
+% \begin{macro}{\@@_backend_opacity:nn, \@@_backend_opacity:xn}
+%   Once again, we use a scope here. There is a general opacity function for
+%   SVG, but that is of course not set up using the stack.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_fill_opacity:n #1
+  { \@@_backend_opacity:nn { \fp_eval:n { min(max(0,#1),1) } } { fill } }
+\cs_new_protected:Npn \@@_backend_stroke_opacity:n #1
+  { \@@_backend_opacity:nn { \fp_eval:n { min(max(0,#1),1) } } { stroke } }
+\cs_new_protected:Npn \@@_backend_opacity:nn #1#2
+  { \__kernel_backend_scope:n { #2 -opacity = "#1" } }
+\cs_generate_variant:Nn \@@_backend_opacity:nn { x }
+%    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
