--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -180,13 +180,15 @@
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_stack_init:Nnn}
-% \begin{variable}{\g_@@_backend_stack_int, \c_@@_backend_main_stack_int}
+% \begin{variable}
+%   {\l_@@_backend_stack_int, \g_@@_backend_stack_int, \c_@@_backend_main_stack_int}
 %   In \texttt{(x)dvipdfmx}, the base color stack is not set up, so we have to
 %   force that, as well as providing a mechanism more generally.
 %    \begin{macrocode}
 \int_compare:nNnTF \c__kernel_sys_dvipdfmx_version_int < { 20201111 }
   { \cs_new_protected:Npn \@@_backend_stack_init:Nnn #1#2#3 { } }
   {
+    \int_new:N \l_@@_backend_stack_int
     \int_new:N \g_@@_backend_stack_int
     \cs_new_protected:Npx \@@_backend_stack_init:Nnn #1#2#3
       {
