Correct fillstroke backend for dvips

--- a/l3backend/l3backend-draw.dtx
+++ b/l3backend/l3backend-draw.dtx
@@ -243,7 +243,6 @@
 \cs_new_protected:Npn \@@_backend_fillstroke:
   {
     \@@_backend_literal:n { gsave }
-    \@@_backend_literal:n { color.sc }
     \@@_backend_literal:n { color.fc }
     \@@_backend_literal:x
       {
@@ -251,7 +250,10 @@
         fill
       }
     \@@_backend_literal:n { grestore }
+    \@@_backend_literal:n { gsave }
+    \@@_backend_literal:n { color.sc }
     \@@_backend_literal:n { stroke }
+    \@@_backend_literal:n { grestore }
     \bool_if:NT \g_@@_draw_clip_bool
       {
         \@@_backend_literal:x
