--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -1189,10 +1189,15 @@
 %    \begin{macrocode}
 \cs_if_exist:NT \pdfmanagement_add:nnn
   {
-    \@@_backend_stack_init:Nnn \c_@@_backend_opacity_stack_int
-      { page ~ direct } { /color.opa 1 ~ gs }
-    \pdfmanagement_add:nnn { Page / Resources / ExtGState }
-      { color.opa 1 } { << /ca ~ 1 /CA ~ 1 >> }
+    \cs_if_exist:NTF \AtBeginDvi
+      { \AtBeginDvi }
+      { \use:n }
+        {
+          \@@_backend_stack_init:Nnn \c_@@_backend_opacity_stack_int
+            { page ~ direct } { /color.opa 1 ~ gs }
+          \pdfmanagement_add:nnn { Page / Resources / ExtGState }
+            { color.opa 1 } { << /ca ~ 1 /CA ~ 1 >> }
+        }
   }
 %    \end{macrocode}
 % \end{variable}
