Use color stack for fill and stroke color
Where possible, of course!

--- a/l3backend/l3backend-header.dtx
+++ b/l3backend/l3backend-header.dtx
@@ -59,11 +59,10 @@
 %<*dvips&header>
 %    \end{macrocode}
 %
-% \begin{macro}{color.sc, color.fc}
-%   Empty definitions for color at the top level.
+% \begin{macro}{color.sc}
+%   Empty definition for color at the top level.
 %    \begin{macrocode}	
 /color.sc { } def
-/color.fc { } def
 %    \end{macrocode}
 % \end{macro}
 %
