Improve some sectioning
[ci skip]

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -919,7 +919,7 @@
 %   code and so should only be used for short-term storage.
 % \end{variable}
 %
-% \subsection{Direct number expansion}
+% \section{Direct number expansion}
 %
 % \begin{function}[EXP, added = 2018-03-27]{\int_value:w}
 %   \begin{syntax}
