--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -260,7 +260,7 @@
 %   \cs[no-index]{\meta{type}_map_break:}.
 % \end{function}
 %
-% \section{An example of recursion with quarks}
+% \subsection{An example of recursion with quarks}
 % \label{sec:l3quark:quark-example}
 %
 % Quarks are mainly used internally in the \pkg{expl3} code to define
