--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1293,7 +1293,7 @@
 %   \end{texnote}
 % \end{function}
 %
-% \subsection{Debugging support}
+% \section{Debugging support}
 %
 % \begin{function}[added = 2017-07-16, updated = 2017-08-02]{\debug_on:n, \debug_off:n}
 %   \begin{syntax}
