Correct Separations setup

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -774,7 +774,7 @@
 %   we share the same code as for \pdfTeX{}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
-  { \@@_backend_select:nn { /#1 ~ cs ~ /#1 ~ CS } { #2 ~ scn ~ #2 ~ SCN } }
+  { \@@_backend_select:nn { /#1 ~ cs ~ #2 ~ scn  } { /#1 ~ CS ~ #2 ~ SCN } }
 \cs_new_eq:NN \@@_backend_select_devicen:nn \@@_backend_select_separation:nn
 %    \end{macrocode}
 % \end{macro}
