--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -936,7 +936,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx||xetex>
+%</dvipdfmx|xetex>
 %    \end{macrocode}
 %
 % \subsection{Fill and stroke color}
@@ -1046,12 +1046,12 @@
     \cs_gset_protected:Npn \@@_backend_stroke:n #1
       { \__kernel_backend_literal:n {#1} }
     \cs_gset_protected:Npn \@@_backend_fill_separation:nn #1#2 { }
-    \cs_gset_eq:NN \@@_backend_fill_devicen:nn 
+    \cs_gset_eq:NN \@@_backend_fill_devicen:nn
       \@@_backend_fill_separation:nn
     \cs_gset_eq:NN \@@_backend_stroke_separation:nn
       \@@_backend_fill_separation:nn
     \cs_gset_eq:NN \@@_backend_stroke_devicen:nn
-      \@@_backend_stroke_separation:nn    
+      \@@_backend_stroke_separation:nn
   }
 %    \end{macrocode}
 % \end{macro}
