Typeset opacity code

--- a/l3backend/l3backend-code.tex
+++ b/l3backend/l3backend-code.tex
@@ -44,6 +44,7 @@ for those people who are interested.
     l3backend-draw.dtx     ,
     l3backend-graphics.dtx ,
     l3backend-pdf.dtx      ,
+    l3backend-opacity.dtx  ,
     l3backend-header.dtx
   }
 \ExplSyntaxOff
