--- a/l3packages/xparse/xparse-2020-10-01.sty
+++ b/l3packages/xparse/xparse-2020-10-01.sty
@@ -165,6 +165,7 @@
       { \__xparse_add_arg:n {##1} }
     \l__xparse_fn_tl
   }
+\cs_new_eq:NN \@@_expandable_grab_u:w \prg_do_nothing:
 %% 
 %%
 %% End of file `xparse.sty'.
