Add \DeclareRelease entries for xparse

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -969,21 +969,46 @@
 %
 % \section{\pkg{xparse} implementation}
 %
+% Three releases are declared using the rollback mechanism:
+% \begin{description}
+% \item[2018-04-12]
+%   contains the full (|package|+|core|) code for \pkg{xparse} as it was
+%   before the |core| part was integrated into \LaTeXe.  This version
+%   should be loaded if \pkg{xparse} is not loaded at all (that is, in
+%   \LaTeXe{} older than 2020-10-01);
+% \item[2020-10-01]
+%   contains only the deprecated types (|package|) for \pkg{xparse},
+%   after the |core| was integrated into \LaTeXe, and a line to load
+%   |xparse-generic.tex|.
+% \item[2021-05-01] (or later)
+%   contains roughly the same code as |2020-10-01|, except the
+%   \pkg{expl3} prefix is now |cmd|, and it doesn't try to load
+%   |xparse-generic.tex|.  This version is just an extension package for
+%   \pkg{ltcmd} in the \LaTeXe{} kernel.
+% \end{description}
+% and one of them is loaded if rolling backwards or forwards.
 %    \begin{macrocode}
-%<@@=xparse>
+\providecommand\DeclareRelease[3]{}
+\providecommand\DeclareCurrentRelease[2]{}
+\DeclareRelease{}{2018-04-12}{xparse-2018-04-12.sty}
+\DeclareRelease{}{2020-10-01}{xparse-2020-10-01.sty}
+\DeclareCurrentRelease{}{2021-05-01}
 %    \end{macrocode}
 %
+% In older releases, the prefix was |xparse|, but since the 2021 Spring
+% release of \LaTeXe, the core code is included in the kernel, and this
+% file only holds the deprecated argument specifiers |G|, |l|, and |u|.
+% To match the prefix in the \LaTeXe{} kernel, so that the deprecated
+% types work if |xparse.sty| is loaded, the prefix has changed to |cmd|.
 %    \begin{macrocode}
-%<*2ekernel>
-\everyjob\expandafter{\the\everyjob
-  \message{xparse <2020-03-03>}%
-}
-\ExplSyntaxOn
-%</2ekernel>
+%<@@=cmd>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
 %<*package>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
 \ProvidesExplPackage{xparse}{2020-10-27}{}
   {L3 Experimental document command parser}
 %    \end{macrocode}
