Pretend xparse.sty is loaded

--- a/l3packages/xparse/xparse-2018-04-12.sty
+++ b/l3packages/xparse/xparse-2018-04-12.sty
@@ -30,8 +30,11 @@
       }%
     \endinput
   }
-\ProvidesExplPackage{xparse}{2021-01-09}{}
-  {L3 Experimental document command parser}
+% \ProvidesExplPackage{xparse}{2021-01-09}{}
+%   {L3 Experimental document command parser}
+\expandafter\protected@xdef\csname ver@xparse.sty\endcsname
+  {2021-01-09 L3 Experimental document command parser}
+\ExplSyntaxOn
 \clist_new:N \l__xparse_options_clist
 \DeclareOption* { \clist_put_right:NV \l__xparse_options_clist \CurrentOption }
 \ProcessOptions \relax
