add expandable clist sorting

--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -1321,6 +1321,335 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\clist_sort:nN,\clist_sort:NN}
+%   Sorting a |clist| can be done in the same way we sort a |tl|, we just have
+%   to convert the |clist| into the same representation used by \cs{tl_sort:nN}
+%   internally during our first bottom up pass and convert back to a |clist|
+%   after we're done. The \cs{clist_sort:NN} variant can take a shortcut in
+%   the bottom up pass as a |clist| variable would already be sanitized. For the
+%   |n| variant we place \cs{prg_do_nothing:} infront of the list to avoid
+%   accidental brace stripping.
+%
+%   In the case that \cs{tex_expanded:D} isn't available we fall back by
+%   converting the |clist| into a token list and using the same sorting function
+%   inside an |f|-expansion. The result is then turned into a |clist|. For the
+%   conversion to a token list we use \cs{clist_map_function:NN} for the
+%   |N|-type and \cs{clist_map_function:nN} for the |n|-type variant.
+%    \begin{macrocode}
+\cs_if_exist:NTF \tex_expanded:D
+  {
+    \cs_new:Npn \clist_sort:nN #1#2
+      {
+        \__kernel_exp_not:w
+          \exp_after:wN \@@_merge_exp_after_bottom_up_clist:Nw \exp_after:wN #2
+          \tex_expanded:D
+            {
+              \@@_merge_exp_bottom_up_clist_n:Nw
+                #2 \prg_do_nothing: #1 , \s_@@_merge_exp_mark ,
+            }
+      }
+    \cs_new:Npn \clist_sort:NN #1#2
+      {
+        \__kernel_exp_not:w
+          \exp_after:wN \@@_merge_exp_after_bottom_up_clist:Nw \exp_after:wN #2
+          \tex_expanded:D
+            {
+              \exp_after:wN \@@_merge_exp_bottom_up_clist_N:Nw \exp_after:wN
+                #2 #1 , \s_@@_merge_exp_mark , \s_@@_merge_exp_stop ,
+            }
+      }
+  }
+  {
+    \cs_new:Npn \clist_sort:nN #1#2
+      {
+        \exp_not:f
+          {
+            \clist_map_function:nN {#1} \@@_quick_prepare_clist:nw
+            \@@_quick_prepare_clist_result:nN {} #2
+          }
+      }
+    \cs_new:Npn \clist_sort:NN #1#2
+      {
+        \exp_not:f
+          {
+            \clist_map_function:NN #1 \@@_quick_prepare_clist:nw
+            \@@_quick_prepare_clist_result:nN { } #2
+          }
+      }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\@@_quick_prepare_clist:nw}
+%    \begin{macrocode}
+    \cs_new:Npn \@@_quick_prepare_clist:nw
+        #1#2 \@@_quick_prepare_clist_result:nN #3
+      {
+        #2 \@@_quick_prepare_clist_result:nN { #3 {#1} }
+      }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\@@_quick_prepare_clist_result:nN}
+%    \begin{macrocode}
+    \cs_new:Npn \@@_quick_prepare_clist_result:nN #1#2
+      {
+        \tl_if_empty:nF {#1}
+          {
+            \exp_after:wN \@@_quick_to_clist:n \exp:w \exp_end_continue_f:w
+              \@@_quick_prepare:Nnnn #2 { } { }
+                #1
+                { \prg_break_point: \@@_quick_prepare_end:NNNnw }
+              \s_@@_stop
+              { \prg_break_point: \@@_quick_to_clist_end:w }
+            \@@_quick_to_clist_result:n { }
+          }
+      }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\@@_quick_to_clist:n}
+%    \begin{macrocode}
+    \cs_new:Npn \@@_quick_to_clist:n #1
+      {
+        \prg_break: #1 \prg_break_point:
+        \__clist_if_wrap:nTF {#1}
+          \@@_quick_to_clist_out_wrap:nw
+          \@@_quick_to_clist_out:nw
+          {#1}
+        \@@_quick_to_clist:n
+      }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\@@_quick_to_clist_out:nw, \@@_quick_to_clist_out_wrap:nw}
+%    \begin{macrocode}
+    \cs_new:Npn \@@_quick_to_clist_out:nw #1#2 \@@_quick_to_clist_result:n #3
+      { #2 \@@_quick_to_clist_result:n { #3 , #1 } }
+    \cs_new:Npn \@@_quick_to_clist_out_wrap:nw
+        #1#2 \@@_quick_to_clist_result:n #3
+      { #2 \@@_quick_to_clist_result:n { #3 , {#1} } }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\@@_quick_to_clist_end:w}
+%    \begin{macrocode}
+    \cs_new:Npn \@@_quick_to_clist_end:w #1 \@@_quick_to_clist_result:n #2
+      { \exp_after:wN \exp_stop_f: \use_none:n #2 }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]
+%   {
+%     \@@_merge_exp_after_bottom_up_clist:Nw,
+%     \@@_merge_exp_after_merge_clist:Nw,
+%     \@@_merge_exp_after_mark_clist:w
+%   }
+%   These macros are the same as in the |tl| sorting variant, except that they
+%   will use \cs{@@_merge_exp_to_clist:n} on the sorted list.
+%    \begin{macrocode}
+\cs_if_exist:NT \tex_expanded:D
+  {
+    \cs_new:Npn \@@_merge_exp_after_bottom_up_clist:Nw
+        #1#2 \s_@@_merge_exp_list #3
+      {
+        \@@_if_stop:w #3 \@@_merge_exp_after_stop:w \s_@@_merge_exp_stop
+        \@@_if_mark:w #3 \@@_merge_exp_after_mark_clist:w \s_@@_merge_exp_mark
+        \exp_after:wN \@@_merge_exp_after_merge_clist:Nw \exp_after:wN #1
+        \tex_expanded:D { \if_false: } \fi:
+          \@@_merge_exp_merge:Nw #1#2 \s_@@_merge_exp_list {#3}
+      }
+    \cs_new:Npn \@@_merge_exp_after_merge_clist:Nw
+        #1#2 \s_@@_merge_exp_list #3
+      {
+        \@@_if_mark:w #3 \@@_merge_exp_after_mark_clist:w \s_@@_merge_exp_mark
+        \exp_after:wN \@@_merge_exp_after_merge_clist:Nw \exp_after:wN #1
+        \tex_expanded:D { \if_false: } \fi:
+          \@@_merge_exp_merge:Nw #1#2 \s_@@_merge_exp_list {#3}
+      }
+    \cs_new:Npn \@@_merge_exp_after_mark_clist:w
+        \s_@@_merge_exp_mark
+        \exp_after:wN \@@_merge_exp_after_merge_clist:Nw \exp_after:wN #1
+        \tex_expanded:D #2 \fi:
+        \@@_merge_exp_merge:Nw #3#4 \s_@@_merge_exp_list
+        #5 \s_@@_merge_exp_list
+        \s_@@_merge_exp_stop \s_@@_merge_exp_list
+      { \tex_expanded:D { { \@@_merge_exp_to_clist:n #4 } } }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[rEXP]
+%   {
+%     \@@_merge_exp_bottom_up_clist_n:Nw,
+%     \@@_merge_exp_bottom_up_clist_n:n,
+%     \@@_merge_exp_bottom_up_clist_n_auxi:n,
+%     \@@_merge_exp_bottom_up_clist_n:wNw,
+%     \@@_merge_exp_bottom_up_clist_n:nNw,
+%     \@@_merge_exp_bottom_up_clist_n_auxii:n,
+%     \@@_merge_exp_bottom_up_clist_n_auxiii:n,
+%     \@@_merge_exp_bottom_up_clist_n:wnN,
+%     \@@_merge_exp_bottom_up_clist_n:w,
+%     \@@_merge_exp_bottom_up_clist_n_mark_i:w,
+%     \@@_merge_exp_bottom_up_clist_n_mark_ii:w
+%   }
+%   These macros do the bottom up pass for a |clist|. Elements are stripped at
+%   commas. For each element we have to test whether it's blank, in which case
+%   it is skipped. Next we need to trim spaces from both ends, after which we
+%   remove exactly one set of possible braces. All this takes several steps
+%   which is why we need a lot of auxiliaries.
+%    \begin{macrocode}
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n:Nw #1#2,
+      {
+        \@@_if_mark:w
+          #2 \@@_merge_exp_bottom_up_clist_n_mark_i:w \s_@@_merge_exp_mark
+        \exp_after:wN \@@_merge_exp_bottom_up_clist_n:n \exp_after:wN {#2}
+        #1 \prg_do_nothing:
+      }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n:n #1
+      {
+        \tl_if_blank:nTF {#1}
+          { \@@_merge_exp_bottom_up_clist_n:Nw }
+          {
+            \tl_trim_spaces_apply:nN {#1} \@@_merge_exp_bottom_up_clist_n_auxi:n
+          }
+      }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n_auxi:n #1
+      { \@@_merge_exp_bottom_up_clist_n:wNw #1 , }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n:wNw #1,
+      { \@@_merge_exp_bottom_up_clist_n:nNw {#1} }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n:nNw #1#2#3,
+      {
+        \@@_if_mark:w
+          #3 \@@_merge_exp_bottom_up_clist_n_mark_ii:w \s_@@_merge_exp_mark
+        \exp_after:wN \@@_merge_exp_bottom_up_clist_n_auxii:n \exp_after:wN
+          {#3} {#1} #2
+      }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n_auxii:n #1
+      {
+        \tl_if_blank:nT {#1} \@@_merge_exp_bottom_up_clist_n:w
+        \tl_trim_spaces_apply:nN {#1} \@@_merge_exp_bottom_up_clist_n_auxiii:n
+      }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n_auxiii:n #1
+      { \@@_merge_exp_bottom_up_clist_n:wnN #1 , }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n:wnN #1,#2#3
+      {
+        #3 {#2} {#1}
+          { \__kernel_exp_not:w { {#2} {#1} } }
+          { \__kernel_exp_not:w { {#1} {#2} } }
+        \s_@@_merge_exp_tail \s_@@_merge_exp_list
+        \@@_merge_exp_bottom_up_clist_n:Nw #3 \prg_do_nothing:
+      }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n:w
+        \tl_trim_spaces_apply:nN #1 \@@_merge_exp_bottom_up_clist_n_auxiii:n
+        #2#3
+      { \@@_merge_exp_bottom_up_clist_n:nNw {#2} #3 \prg_do_nothing: }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n_mark_i:w
+        \s_@@_merge_exp_mark
+        \exp_after:wN \@@_merge_exp_bottom_up_clist_n:n \exp_after:wN #1
+        \prg_do_nothing:
+        \s_@@_merge_exp_stop
+      {
+        \s_@@_merge_exp_mark \s_@@_merge_exp_list
+        \s_@@_merge_exp_stop \s_@@_merge_exp_list
+      }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_n_mark_ii:w
+        \s_@@_merge_exp_mark
+        \exp_after:wN \@@_merge_exp_bottom_up_clist_n_auxii:n \exp_after:wN
+        #1#2#3
+        \s_@@_merge_exp_stop
+      {
+        { \__kernel_exp_not:w {#2} }
+        \s_@@_merge_exp_tail \s_@@_merge_exp_list
+        \s_@@_merge_exp_mark \s_@@_merge_exp_list
+        \s_@@_merge_exp_stop \s_@@_merge_exp_list
+      }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[rEXP]
+%   {
+%     \@@_merge_exp_bottom_up_clist_N:Nw,
+%     \@@_merge_exp_bottom_up_clist_N_stop:w,
+%     \@@_merge_exp_bottom_up_clist_N_mark:w
+%   }
+%   If the input is a |clist| variable the sanitizing is already done and we
+%   just need to grab two list elements and else do the same as for the |tl|
+%   bottom up variant.
+%    \begin{macrocode}
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_N:Nw #1#2,#3,
+      {
+        \@@_if_stop:w
+          #3 \@@_merge_exp_bottom_up_clist_N_stop:w \s_@@_merge_exp_stop
+        \@@_if_mark:w
+          #3 \@@_merge_exp_bottom_up_clist_N_mark:w \s_@@_merge_exp_mark
+        #1 {#2} {#3}
+          { \__kernel_exp_not:w { {#2} {#3} } }
+          { \__kernel_exp_not:w { {#3} {#2} } }
+        \s_@@_merge_exp_tail \s_@@_merge_exp_list
+        \@@_merge_exp_bottom_up_clist_N:Nw #1
+      }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_N_stop:w
+        \s_@@_merge_exp_stop
+        \@@_if_mark:w \s_@@_merge_exp_stop
+        \@@_merge_exp_bottom_up_clist_N_mark:w \s_@@_merge_exp_mark
+        #1
+        \s_@@_merge_exp_tail \s_@@_merge_exp_list
+        \@@_merge_exp_bottom_up_clist_N:Nw #2
+      {
+        \s_@@_merge_exp_mark \s_@@_merge_exp_list
+        \s_@@_merge_exp_stop \s_@@_merge_exp_list
+      }
+    \cs_new:Npn \@@_merge_exp_bottom_up_clist_N_mark:w
+        \s_@@_merge_exp_mark
+        #1#2#3
+        \s_@@_merge_exp_tail \s_@@_merge_exp_list
+        \@@_merge_exp_bottom_up_clist_N:Nw #4
+      {
+        { \__kernel_exp_not:w {#2} }
+        \s_@@_merge_exp_tail \s_@@_merge_exp_list
+        \s_@@_merge_exp_mark \s_@@_merge_exp_list
+        \s_@@_merge_exp_stop \s_@@_merge_exp_list
+      }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[rEXP]
+%   {
+%     \@@_merge_exp_to_clist:n,
+%     \@@_merge_exp_to_clist_next:n,
+%     \@@_merge_exp_to_clist_done:w
+%   }
+%   The first recursion of this loop doesn't need to check whether the end is
+%   reached, as it is never used on an empty list. The next recursions all need
+%   to check whether the end is reached and put a comma before each output
+%   element. We use \cs{__clist_if_wrap:nTF} to decide whether an additional set
+%   of braces is necessary.
+%    \begin{macrocode}
+    \cs_new:Npn \@@_merge_exp_to_clist:n #1
+      {
+        \__clist_if_wrap:nTF {#1}
+          { { \__kernel_exp_not:w {#1} } }
+          { \__kernel_exp_not:w {#1} }
+        \@@_merge_exp_to_clist_next:n
+      }
+    \cs_new:Npn \@@_merge_exp_to_clist_next:n #1
+      {
+        \@@_if_tail:w #1 \@@_merge_exp_to_clist_done:w \s_@@_merge_exp_tail
+        ,
+        \__clist_if_wrap:nTF {#1}
+          { { \__kernel_exp_not:w {#1} } }
+          { \__kernel_exp_not:w {#1} }
+        \@@_merge_exp_to_clist_next:n
+      }
+    \cs_new:Npn \@@_merge_exp_to_clist_done:w
+        \s_@@_merge_exp_tail
+        ,
+        \__clist_if_wrap:nTF #1
+        \@@_merge_exp_to_clist_next:n
+      {}
+  }
+%    \end{macrocode}
+% \end{macro}
 %
 % \subsection{Messages}
 %
