--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1005,9 +1005,9 @@
   {
     \ExplSyntaxOff
     \IfFormatAtLeastTF{2020/10/01}
-%<2ekernel>      {\@@@@input xparse-generic.tex }
-%<package>      {\RequirePackage{xparse-2020-10-01}}
-      {\RequirePackage{xparse-2018-04-12}}
+%<2ekernel>      { \@@@@input xparse-generic.tex ~ }
+%<package>      { \RequirePackage{xparse-2020-10-01} }
+      { \RequirePackage{xparse-2018-04-12} }
     \file_input_stop:
   }
 %    \begin{macrocode}
