fix missing scan mark

--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -1349,6 +1349,7 @@
             {
               \@@_merge_exp_bottom_up_clist_n:Nw
                 #2 \prg_do_nothing: #1 , \s_@@_merge_exp_mark ,
+              \s_@@_merge_exp_stop
             }
       }
     \cs_new:Npn \clist_sort:NN #1#2
