Tidy up opacity support for dvisvgm

--- a/l3backend/l3backend-opacity.dtx
+++ b/l3backend/l3backend-opacity.dtx
@@ -256,25 +256,19 @@
 %<*dvisvgm>
 %    \end{macrocode}
 %
-% \begin{macro}{\@@_backend_select:n}
-%   No stack support.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_select:n #1 { }
-%    \end{macrocode}
-% \end{macro}
-%
-% \begin{macro}{\@@_backend_fill:n, \@@_backend_stroke:n}
-% \begin{macro}{\@@_backend:nn, \@@_backend:xn}
+% \begin{macro}{\@@_backend_select:n, \@@_backend_fill:n, \@@_backend_stroke:n}
+% \begin{macro}{\@@_backend:nn}
 %   Once again, we use a scope here. There is a general opacity function for
 %   SVG, but that is of course not set up using the stack.
 %    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_select:n #1
+  { \@@_backend:nn {#1} { } }
 \cs_new_protected:Npn \@@_backend_fill:n #1
-  { \@@_backend:nn { \fp_eval:n { min(max(0,#1),1) } } { fill } }
+  { \@@_backend:nn {#1} { fill- } }
 \cs_new_protected:Npn \@@_backend_stroke:n #1
-  { \@@_backend:nn { \fp_eval:n { min(max(0,#1),1) } } { stroke } }
+  { \@@_backend:nn { {#1} } { stroke- } }
 \cs_new_protected:Npn \@@_backend:nn #1#2
-  { \__kernel_backend_scope:n { #2 -opacity = "#1" } }
-\cs_generate_variant:Nn \@@_backend:nn { x }
+  { \__kernel_backend_scope:x { #2 opacity = " \fp_eval:n { min(max(0,#1),1) } " } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
