Missed a few __bitset

--- a/l3experimental/l3bitset/l3bitset.dtx
+++ b/l3experimental/l3bitset/l3bitset.dtx
@@ -537,7 +537,7 @@
 \cs_generate_variant:Nn \bitset_log:N  { c }
 \cs_new_protected:Npn   \bitset_show_named_index:N { \@@_show_named_index:NN \msg_show:nnxxxx }
 \cs_generate_variant:Nn \bitset_show_named_index:N { c }
-\cs_new_protected:Npn \__bitset_show:NN #1#2
+\cs_new_protected:Npn \@@_show:NN #1#2
   {
     \__kernel_chk_defined:NT #2
       {
@@ -548,7 +548,7 @@
            { }
       }
   }
-\cs_new_protected:Npn \__bitset_show_named_index:NN #1#2
+\cs_new_protected:Npn \@@_show_named_index:NN #1#2
   {
     \__kernel_chk_defined:NT #2
       {
