Adjust PDF destination 'box' setup
There's no real need for any 'content'.

--- a/l3experimental/l3pdf/l3pdf.dtx
+++ b/l3experimental/l3pdf/l3pdf.dtx
@@ -422,29 +422,12 @@
   }
 %    \end{macrocode}
 % \end{macro}
-% \begin{variable}{\l_@@_tmpa_box,\l_@@_tmpb_box}
-%    \begin{macrocode}
-\box_new:N \l_@@_tmpa_box
-\box_new:N \l_@@_tmpb_box
-%    \end{macrocode}
-% \end{variable}
 %
 % \begin{macro}{\pdf_destination:nnnn}
 %    \begin{macrocode}
 \cs_new_protected:Npn \pdf_destination:nnnn #1 #2 #3 #4
   {
-    \hbox_set_to_wd:Nnn \l_@@_tmpa_box {#2} {}
-    \box_set_ht:Nn \l_@@_tmpa_box {#3}
-    \box_set_dp:Nn \l_@@_tmpa_box {#4}
-    \hbox_set_to_wd:Nnn \l_@@_tmpb_box {0pt}
-      {
-        \@@_backend_destination_box:nn
-          { #1 }
-          { \box_use:N \l_@@_tmpa_box }
-      }
-    \box_set_dp:Nn \l_@@_tmpb_box {0pt}
-    \box_set_ht:Nn \l_@@_tmpb_box {0pt}
-    \box_use:N\l_@@_tmpb_box
+    \@@_backend_destination:nnnn {#1} {#2} {#3} {#4}
   }
 %    \end{macrocode}
 % \end{macro}
