--- a/l3experimental/l3pdf/l3pdf.dtx
+++ b/l3experimental/l3pdf/l3pdf.dtx
@@ -174,7 +174,9 @@
 %   This function may only be used up to the point where the PDF file is
 %   initialised.
 % \end{function}
+%
 % \subsection{Destinations}
+%
 % Destinations are the places a link jumped too.
 % Unlike the name may suggest they don't described
 % an exact location in the PDF. Instead a destination contains a reference to
@@ -197,10 +199,10 @@
 %   |fitv|, |fitb|, |fitbh|, |fitbv|, |fitr|, |xyz|
 %   or an integer representing a  scale factor in percent.
 %   |fitr| here gives only a lightweight version of |/FitR|:
-%   The backend code defines |fitr| so that it will with pdflatex and
-%   lualatex use the coordinates of the surrounding box,
-%   with dvips and dvipdfmx it falls back to |fit|. For full control use
-%   \cs{pdf_destination_box:nn}.
+%   The backend code defines |fitr| so that it will with \pdfLaTeX{} and
+%   \LuaLaTeX{} use the coordinates of the surrounding box,
+%   with \texttt{dvips} and \texttt{dvipdfmx} it falls back to |fit|.
+%   For full control use \cs{pdf_destination:nnnn}.
 %
 %   The keywords match to the PDF names as described in the following tabular.
 %
@@ -237,7 +239,7 @@
 %   \begin{syntax}
 %     \cs{pdf_destination:nnnn} \Arg{name} \Arg{width} \Arg{height} \Arg{depth}
 %   \end{syntax}
-%   This creates a destination with |/FitR| type with the given dimensions relativ
+%   This creates a destination with |/FitR| type with the given dimensions relative
 %   to the current location. The destination is in a box of size zero, but it doesn't
 %   switch to horizontal mode.
 % \end{function}
@@ -414,6 +416,7 @@
 % \end{macro}
 %
 % \subsection{Destinations}
+%
 % \begin{macro}{\pdf_destination:nn}
 %    \begin{macrocode}
 \cs_new_protected:Npn \pdf_destination:nn #1 #2
