Keep PDF destination boxed

--- a/l3experimental/l3pdf/l3pdf.dtx
+++ b/l3experimental/l3pdf/l3pdf.dtx
@@ -421,7 +421,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \pdf_destination:nn #1 #2
   {
-    \@@_backend_destination:nn {#1}{#2}
+    \hbox_to_zero:n
+      { \@@_backend_destination:nn {#1}{#2} }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -430,7 +431,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \pdf_destination:nnnn #1 #2 #3 #4
   {
-    \@@_backend_destination:nnnn {#1} {#2} {#3} {#4}
+    \hbox_to_zero:n
+      { \@@_backend_destination:nnnn {#1} {#2} {#3} {#4} }
   }
 %    \end{macrocode}
 % \end{macro}
