--- a/l3experimental/l3pdf/l3pdf.dtx
+++ b/l3experimental/l3pdf/l3pdf.dtx
@@ -199,7 +199,7 @@
 %   |fitv|, |fitb|, |fitbh|, |fitbv|, |fitr|, |xyz|
 %   or an integer representing a  scale factor in percent.
 %   |fitr| here gives only a lightweight version of |/FitR|:
-%   The backend code defines |fitr| so that it will with \pdfLaTeX{} and
+%   The backend code defines |fitr| so that it will with pdf\LaTeX{} and
 %   Lua\LaTeX{} use the coordinates of the surrounding box,
 %   with \texttt{dvips} and \texttt{dvipdfmx} it falls back to |fit|.
 %   For full control use \cs{pdf_destination:nnnn}.
